deploys/01-foo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-backend-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: foo-app
  template:
    metadata:
      labels:
        app: foo-app
    spec:
      containers:
        - name: foo-app
          image: gcr.io/google-samples/hello-app:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: foo-app-service
spec:
  type: NodePort
  selector:
    app: foo-app
  ports:
    - port: 80
      targetPort: 8080

#TESTAR COM TARGET 80 SEM NAMESPACE E TARGET 8080 COM NAMESPACE
