deploys/02-bar-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-backend-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: bar-app
  template:
    metadata:
      labels:
        app: bar-app
    spec:
      containers:
        - name: bar-app
          image: gcr.io/google-samples/hello-app:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: bar-app-service
spec:
  type: NodePort
  selector:
    app: bar-app
  ports:
    - port: 80
      targetPort: 8080
